--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prod": "ng build --configuration=production --base-href=https://yuribg.github.io/poke-buds-3.0.1/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "typedoc": "typedoc && touch docs/.nojekyll"
+    "nojekyll": "touch docs/.nojekyll"
   },
   "private": true,
   "dependencies": {
